=== 0.1.5 / 2009-01-14

* Tests remade using test/spec

=== 0.1.4 / 2000-01-01

* Expanded test coverage
* Some formatting/doc improvements

=== 0.1.3 / 2008-12-25

* Implement the format FFmpeg uses (fractional seconds instead of frames)

=== 0.1.2 / 2008-12-25

* Fix to_uint
* Always use float frame rates and rely on a small delta for comparison

=== 0.1.1 / 2008-12-15

* Allow passing framerate to from_uint

=== 0.1.0 / 2008-12-15

* 1 major enhancement

  * Birthday!
