@@ -51,8 +51,14 @@
 * disallow more frames than what the framerate permits
 * propery accept usable values
 
+== A custom Timecode descendant should
+* properly classify on parse
+* properly classify on at
+* properly  classify on calculations
+
 == Timecode.parse() should
 * handle complete SMPTE timecode
+* handle complete SMPTE timecode via new
 * refuse to handle timecode that is out of range for the framerate
 * parse a row of numbers as parts of a timecode starting from the right
 * parse a number with f suffix as frames
@@ -71,4 +77,4 @@
 * parse from a 4x4bits packed 32bit unsigned int
 * properly convert itself back to 4x4 bits 32bit unsigned int
 
-48 specifications (80 requirements), 0 failures
+52 specifications (87 requirements), 0 failures
