@@ -1,3 +1,5 @@
+* Custom Timecode descendants should hold on to their class
+
 === 0.1.5 / 2009-01-14
 
 * Tests remade using test/spec
